Testing terraform validate

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,3 +12,6 @@ repos:
       args:
         - --args=-diff
         - --args=-write=true
+    - id: terraform_validate
+      args:
+        - --args=-json
