--- a/terraform/environments/dev/terraform.tfvars.example
+++ b/terraform/environments/dev/terraform.tfvars.example
@@ -12,8 +12,8 @@ user_name       = ""
 # the firewall, Panorama (if created), Windows and Ubuntu jumpboxes.
 password        = ""
 
-# Role with no spaces.
-role = ""
-
-# Address space to use. A /22 is expected.
-address_space = ["10.32.0.0/22"]
+# Valid roles are:
+# rn for remote network
+# sc for service connection
+# pan for panorama
+role            = ""
